<resources>
    <string name="app_name">Zapp</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="tw_email">EMAIL</string>
    <string name="tw_password">PASSWORD</string>
    <string name="act_login_BUT_Login">Let\'s charge!</string>
    <string name="act_login_TV_Register">Don\'t have an account? <u>Register here!</u></string>

    <string name="act_login_TV_ForgotPassword">Forgot?</string>
    <string name="act_login_TIET_email_hint">Email</string>
    <string name="act_login_TIET_password_hint">Password</string>
    <string name="base_url">192.168.6.33:5070</string>
    <string name="stations_url">/api/Stations</string>
    <string name="auth_url">/api/Auth</string>
    <string name="cars_url">/api/Cars</string>
    <string name="category_url">/api/Category</string>
    <string name="messages_url">/api/Messages</string>
    <string name="topics_url">/api/Topics</string>
    <string name="team_key">SWFMDCMMZBGU8</string>

    <string name="act_register_TV_Register">Please fill in all the fields</string>
    <string name="act_register_TIET_firstName_hint">First Name</string>
    <string name="act_register_TIET_lastName_hint">Last Name</string>
    <string name="act_register_TIET_email_hint">Email</string>
    <string name="act_register_TIET_password_hint">Password</string>
    <string name="act_register_BUT_register">Start charging!</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="act_navigation_nav_header_title">Zapp</string>
    <string name="settings_bar_title">Settings</string>
    <string name="dialog_display_first_name_title">Change first name</string>
    <string name="dialog_display_name_validity">Name invalid</string>
    <string name="dialog_display_last_name_title">Change last name</string>
    <string name="dialog_last_name_validity">Last name invalid</string>
    <string name="act_navigation_IV_Settings">Settings</string>
    <string name="preferences_help">Help</string>
    <string name="preferences_feedback">Send feedback on our app</string>
    <string name="preferences_feedback_title">Contact</string>
    <string name="preferences_account">Account</string>
    <string name="preferences_first_name_change">First Name</string>
    <string name="preferences_last_name_change">Last Name</string>
    <string name="frag_cars_TV_title">My vehicles</string>
    <string name="preferences_my_cars">My Cars</string>
    <string name="popup_edit_BTN_remove">Remove car</string>
    <string name="frag_cars_BTN_add">Add car</string>
    <string name="frag_cars_add_TIET_model_hint">Model</string>
    <string name="frag_cars_add_TIET_company_hint">Company</string>
    <string name="frag_cars_add_TIET_autonomy_hint">Autonomy</string>
    <string name="frag_cars_add_TIET_batteryLife_hint">Battery Life</string>
    <string name="frag_cars_add_TIET_year_hint">Year</string>
    <string name="frag_cars_add_TIET_lastTechRevision_hint">Last Technical Revision</string>
    <string name="act_navigation_TIET_station_name_hint">Station name</string>
    <string name="act_navigation_TIET_total_sockets_hint">Nr. total sockets</string>
    <string name="popup_add_station_TIET_station_name_hint">Station name</string>
    <string name="popup_add_station_TIET_total_sockets_hint">Total sockets</string>
    <string name="popup_add_station_BTN_add">Add station</string>
    <string name="popup_details_down_vote">Down Vote</string>
    <string name="popup_details_up_vote">Up Vote</string>
    <string name="popup_edit_add_TIET_model_hint">Model</string>
    <string name="popup_edit_add_TIET_company_hint">Company</string>
    <string name="popup_edit_add_TIET_autonomy_hint">Autonomy</string>
    <string name="popup_edit_add_TIET_batteryLife_hint">Battery Life</string>
    <string name="popup_edit_add_TIET_year_hint">Year</string>
    <string name="popup_edit_add_TIET_lastTechRevision_hint">Last Tech Revision</string>
    <string name="popup_edit_BTN_add">Add changes</string>
    <string name="alert_out_of_verification">Your last tech revision expired for the model:</string>
</resources>
