<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/frag_cars_add_LL_1"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_cars_add_TIL_model"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:textColorHint="#000000"
            android:theme="@style/TextInputLayoutTheme"
            app:errorEnabled="true"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"
            app:errorTextAppearance="@style/error_appearance"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_cars_add_TIET_model"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:hint="@string/frag_cars_add_TIET_model_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_cars_add_TIL_company"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:textColorHint="#000000"
            android:theme="@style/TextInputLayoutTheme"
            app:errorEnabled="true"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"
            app:errorTextAppearance="@style/error_appearance"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_cars_add_TIET_company"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:hint="@string/frag_cars_add_TIET_company_hint" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <View
        android:id="@+id/frag_cars_add_view_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4"
        app:layout_constraintTop_toBottomOf="@id/frag_cars_add_LL_1"
        />
    <LinearLayout
        android:id="@+id/frag_cars_add_LL_2"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/frag_cars_add_view_1">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_cars_add_TIL_autonomy"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:textColorHint="#000000"
            android:theme="@style/TextInputLayoutTheme"
            app:errorEnabled="true"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"
            app:errorTextAppearance="@style/error_appearance"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_cars_add_TIET_autonomy"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="number"
                android:hint="@string/frag_cars_add_TIET_autonomy_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_cars_add_TIL_batteryLife"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:textColorHint="#000000"
            android:theme="@style/TextInputLayoutTheme"
            app:errorEnabled="true"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"
            app:errorTextAppearance="@style/error_appearance"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_cars_add_TIET_batteryLife"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="number"
                android:hint="@string/frag_cars_add_TIET_batteryLife_hint" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <View
        android:id="@+id/frag_cars_add_view_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4"
        app:layout_constraintTop_toBottomOf="@id/frag_cars_add_LL_2"
        />
    <LinearLayout
        android:id="@+id/frag_cars_add_LL_3"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/frag_cars_add_view_2">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_cars_add_TIL_year"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:textColorHint="#000000"
            android:theme="@style/TextInputLayoutTheme"
            app:errorEnabled="true"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"
            app:errorTextAppearance="@style/error_appearance"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_cars_add_TIET_year"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="number"
                android:hint="@string/frag_cars_add_TIET_year_hint" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_cars_add_TIL_lastTechRevision"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:textColorHint="#000000"
            android:theme="@style/TextInputLayoutTheme"
            app:errorEnabled="true"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"
            app:errorTextAppearance="@style/error_appearance"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_cars_add_TIET_lastTechRevision"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:hint="@string/frag_cars_add_TIET_lastTechRevision_hint"
                android:focusable="false"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <View
        android:id="@+id/frag_cars_add_view_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4"
        app:layout_constraintTop_toBottomOf="@id/frag_cars_add_LL_3"
        />

    <LinearLayout
    android:id="@+id/frag_cars_add_LL_add"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/frag_cars_add_view_3">

    <Button
        android:id="@+id/frag_cars_add_BTN_add_car"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_info_cancel"
        android:drawableStart="@drawable/ic_baseline_add_24px"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center|center_vertical"
        android:padding="12dp"
        android:singleLine="true"
        android:stateListAnimator="@animator/button_click_animator"
        android:text="@string/frag_cars_BTN_add"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

</LinearLayout>
    <ImageView
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:background="@drawable/ic_car_book"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#10000000"/>
</androidx.constraintlayout.widget.ConstraintLayout>