<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_charging_station"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popup_add_station_LL_info"/>

    <LinearLayout
        android:id="@+id/popup_add_station_LL_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/popup_add_station_TIL_station_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:textColorHint="#000000"
            android:theme="@style/TextInputLayoutTheme"
            app:errorEnabled="true"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"
            app:errorTextAppearance="@style/error_appearance"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/popup_add_station_TIET_station_name"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="2"
                android:hint="@string/popup_add_station_TIET_station_name_hint" />

        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#E4E4E4"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/popup_add_station_TIL_total_sockets"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:textColorHint="#000000"
            android:theme="@style/TextInputLayoutTheme"
            app:errorEnabled="true"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"
            app:errorTextAppearance="@style/error_appearance"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/popup_add_station_TIET_total_sockets"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="number"
                android:hint="@string/popup_add_station_TIET_total_sockets_hint" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/popup_add_station_BTN_add_station"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:background="@drawable/button_info_cancel"
        android:drawableStart="@drawable/ic_baseline_add_24px"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="12dp"
        android:singleLine="true"
        android:text="@string/popup_add_station_BTN_add"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/roboto_regular"
        android:textAllCaps="false"
        android:gravity="center|center_vertical"
        android:textSize="12sp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="18dp"
        android:stateListAnimator="@animator/button_click_animator"
        app:layout_constraintTop_toBottomOf="@id/popup_add_station_LL_info"/>
</androidx.constraintlayout.widget.ConstraintLayout>