<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/act_register_CL_Root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:padding="16dp"
    tools:context=".login.RegisterActivity"
    android:background="@drawable/login_background"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:src="@drawable/ic_logo_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ProgressBar
        android:id="@+id/act_register_PB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:translationZ="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_register_TV_Register"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintBottom_toTopOf="@id/act_register_CV_FormContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/act_register_CV_FormContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".5"

        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"

        card_view:cardCornerRadius="16dp"
        card_view:cardElevation="8dp">

        <LinearLayout
            android:id="@+id/act_register_LL_CV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/act_register_TIL_firstName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:textColorHint="#000000"
                    android:theme="@style/TextInputLayoutTheme"
                    app:errorEnabled="true"
                    android:padding="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="0.5"
                    app:errorTextAppearance="@style/error_appearance"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/act_register_TIET_firstName"
                        style="@style/InputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:hint="@string/act_register_TIET_firstName_hint" />

                </com.google.android.material.textfield.TextInputLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#E4E4E4"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/act_register_TIL_lastName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:textColorHint="#000000"
                    android:theme="@style/TextInputLayoutTheme"
                    app:errorEnabled="true"
                    android:padding="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="0.5"
                    app:errorTextAppearance="@style/error_appearance"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/act_register_TIET_lastName"
                        style="@style/InputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:hint="@string/act_register_TIET_lastName_hint" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E4E4E4" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/act_register_TIL_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColorHint="#000000"
                android:theme="@style/TextInputLayoutTheme"
                app:errorEnabled="true"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                app:errorTextAppearance="@style/error_appearance"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/act_register_TIET_email"
                    style="@style/InputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/act_register_TIET_email_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E4E4E4" />

            <RelativeLayout
                android:id="@+id/act_register_RL_CV_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/act_register_TIL_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginTop="8dp"
                    android:background="#FFFFFF"
                    android:textColorHint="#000000"
                    android:theme="@style/TextInputLayoutTheme"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/error_appearance">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/act_register_TIET_password"
                        style="@style/InputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="@string/act_register_TIET_password_hint"
                        android:inputType="textPassword"
                        android:maxLength="20" />

                </com.google.android.material.textfield.TextInputLayout>


                <ImageView
                    android:id="@+id/act_register_IV_ShowPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:src="@drawable/ic_baseline_visibility_off_24px"
                    android:textAlignment="center"
                    />
            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/act_register_BUT_register"
        style="@style/ButtonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/act_register_CV_FormContainer"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_submit"
        android:onClick="onRegisterBTN"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"
        android:stateListAnimator="@animator/button_click_animator"
        android:text="@string/act_register_BUT_register"

        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_register_CV_FormContainer" />


</androidx.constraintlayout.widget.ConstraintLayout>